--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="author" content="Pranali Linge">
   <meta name="description" content="UX/UI designer,user interaction designer">
-  <title>UX/UI designer with background in industrial design.
+  <title>UX/UI designer.
   </title>
     <link href="img/favicon.ico" rel="shortcut icon">
 </head>
