--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="author" content="Pranali Linge">
   <meta name="description" content="UX/UI designer,user interaction designer">
-  <title>about me
+  <title>About Pranali Linge
   </title>
     <link href="img/favicon.ico" rel="shortcut icon">
 </head>
