Update project link on index

--- a/evermind.html
+++ b/evermind.html
@@ -23,51 +23,158 @@
     </div>
   </header>
   <main>
-    <div></div>
     <div>
-      <h1>Hi,I’m Pranali Linge, a UX/UI designer with a background in Industrial design.</h1>
-      <p>
-        Experienced in communicating ideas and empathizing with people to create user-centric
-        design solutions. I completed my UX design course with specialization in frontend
-        development at Career foundry, Berlin. I’m currently looking for career opportunities,
-        where I can thrive in my role and continue to grow as a UI/UX designer.</p>
-    </div>
-    <div>
-      <!-- open row that holds (2) columns for project -->
+      <h1>Evermind</h1>
+      </div>
       <div>
-        <!-- open first column (used for image) -->
         <picture>
-          <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-          <img src="http://via.placeholder.com/1200x800" alt="My Image">
+          <source srcset="portfolio/img/evermindbrief@1x.jpg" media="(max-width:767px)">
+          <img src="portfolio/img/evermindbrief@1x.jpg" alt="Evermind">
         </picture>
-      </div><!-- end first column -->
-      <div>
-        <!-- open second column (used for text) -->
-        <h3>Evermind</h3><!-- heading for the project -->
-        <p>
-          <!-- open paragraph -->
-          Is Mental fitness platform that helps your mind stay calm and healthy.
-        </p><!-- end paragraph -->
-        <picture>
-  <source srcset="img/evermind/Evermind@1x.jpg" media="(max-width:767px)">
-  <img src="img/evermind/Evermind@2x.jpg" alt="evermind mockup">
+        </div>
+        <div>
+          <h2>Brief</h2>
+          <p> With Evermind, you can find quick audio and video guides of exercises
+            for anxiety, sleep issues, stress, and boosting your self-esteem.
+          </p>
+        </div>
+        <div>
+        <h2>Challenge</h2>
+        <p> In light of the overall growth in virtual activities since 2020, along
+          with the damaging impact that COVID-19 has had on individual mental health,
+          I wanted to contribute to a product space that can assist users in acquiring
+          and maintaining mental fitness.</p>
+      </div>
+      <h2>Role</h2>
+<p> UX research, UX design, Visual design </p>
+      <h2>Duration </h2>
+      <p>5 months </p>
+      <h2>Tools </h2>
+      <p> <li>Figma</li>
+        <li>Adobe illustrator</li>
+        <li>Adobe photoshop</li>
+        <div>
+          <h2>Process</h2>
+          <picture>
+          <source srcset="portfolio/img/evermind/Evermindprocess@1x.jpg" media="(max-width:767px)">
+          <img src="portfolio/img/evermind/Evermindprocess@1x.jpg" alt="Evermind">
+        </picture>
+      </div>
+<h2>Competitive analysis</h2>
+<p> To start the project, I looked at two mental fitness building apps to analyse what is currently on the market.</p>
+<ul><li> Talkspace</li>
+<li>Calm</li>
+  <picture>
+  <source srcset="portfolio/img/Evermind_CA talkspace@1x.jpg" media="(max-width:767px)">
+  <img src="portfolio/img/Evermind_CA talkspace@1x" alt="Talkspace">
 </picture>
-        <a href="evermind.html">Read more</a><!-- button or link label -->
-      </div><!-- end second column -->
-      <div>
-        <!-- open second column (used for text) -->
-        <h3>Maimilk</h3><!-- heading for the project -->
-        <p>
-          <!-- open paragraph -->
-          A milk delivery application
-        </p><!-- end paragraph -->
-        <picture>
-  <source srcset="img/maimilk/maimilk@1x.jpg" media="(max-width:767px)">
-  <img src="img/maimilk/maimilk@2x.jpg" alt="maimilk mockup">
+<div>
+  <picture>
+  <source srcset="portfolio/img/Evermind_CAcalm@1x.jpg" media="(max-width:767px)">
+  <img src="portfolio/img/Evermind_CAcalm@1x.jpg" alt="calm">
 </picture>
-<a href="">Read more</a><!-- button or link label -->
-      </div><!-- end second column -->
-    </div><!-- end row that holds (2) columns for project -->
+</div>
+<div>
+  <h2> User research </h2>
+  <p> United the key insights from the research of competitor apps and observational
+    data from the user interviews to determine which direction to take with my project.
+    I decided to ideate and design an application that directs the user through audio
+    and video guides and talk to an expert. I developed personas to represent the needs,
+    goals and behaviors of the potential users. </p>
+</div>
+<div>
+<h3> user journey map </h3>
+<p> Next, I mapped my target users’ common emotions when completing tasks. Through this
+  process I gained a deeper understanding of how emotions such as frustration or confusion
+  could lead to decreased trust in the product or  abandonment of a task altogether. </p>
+  <picture>
+  <source srcset="portfolio/img/Evermind_userjourneymap@1x.jpg" media="(max-width:767px)">
+  <img src="portfolio/img/Evermind_userjourneymap@1x.jpg" alt="user journey map">
+</picture>
+</div>
+<div>
+  <h3> User flow </h3>
+  <p> Before heading into information architecture of my app, I did task analysis and
+  created user flows to understand the needs of my app users in more detail. With the help
+  of the user flow it is possible to follow the users progress of a certain task through
+  out a diagram. </p>
+  <picture>
+  <source srcset="portfolio/img/Evermind_userflow@1x.jpg" media="(max-width:767px)">
+  <img src="portfolio/img/Evermind_userflow@1x.jpg" alt="userflow">
+</picture>
+</div>
+<div>
+  <h3> Information Architecture </h3>
+  <p>The following is the sitemap based on the previously defined persona.
+    A closed card sorting with seven participants was conducted to iterate the
+    sitemap and to get  a better understanding of the user’s mental model.</p>
+    <picture>
+    <source srcset="portfolio/img/Evermind_informationarchitect@1x.jpg" media="(max-width:767px)">
+    <img src="portfolio/img/Evermind_informationarchitect@1x.jpg" alt="information acrchitecture">
+  </picture>
+</div>
+<div>
+    <h3> Cardsorting </h3>
+    <picture>
+    <source srcset="portfolio/img/Evermind_cardsorting@1x.jpg" media="(max-width:767px)">
+    <img src="portfolio/img/Evermind_cardsorting@1x.jpg" alt="Cardsorting">
+  </picture>
+</div>
+<div>
+  <h3>Prototypes</h3>
+     <picture>
+     <source srcset="portfolio/img/Evermind_Lowfedilitywireframes@1x.jpg" media="(max-width:767px)">
+     <img src="portfolio/img/Evermind_Lowfedilitywireframes@1x.jpg" alt="low fedility wireframes">
+   </picture>
+</div>
+<div>
+  <h3>Mid fedility wireframes</h3>
+    <p>To further work on details of the application, I created mid-fedility wireframes.
+      I expanded on my design with mid-fidelity wireframes by adding more screens as appropriate
+      according to the logic of my user flows.<p/>
+      <picture>
+      <source srcset="portfolio/img/Evermind_midfedility wireframes@1x.jpg" media="(max-width:767px)">
+      <img src="portfolio/img/Evermind_midfedility wireframes@1x.jpg" alt="low fedility wireframes">
+    </picture>
+  </div>
+  <div>
+    <h3>Usability testing</h3>
+    <p>As soon as I completed the design phase, I created a usability test plan and tested the
+      app with real users to identify its strengths and weaknesses.<p/>
+      <picture>
+      <source srcset="portfolio/img/Evermind_usertesting@1x.jpg" media="(max-width:767px)">
+      <img src="portfolio/img/Evermind_usertesting@1x.jpg" alt="mid fedility wireframes">
+    </picture>
+    <h3>goal</h3>
+    <p>We observed and measured whether users understood the app and its value and how to
+      complete basic functions such as logging in as well as primary functions when interacting
+      with mindsoul for the first time on mobile.</p>
+      <h3>A/B preference test </h3>
+      <picture>
+      <source srcset="portfolio/img/Evermind_AB preference test@1x.jpg" media="(max-width:767px)">
+      <img src="portfolio/img/Evermind_AB preference test@1x" alt="A/B preference test">
+    </picture>
+  </div>
+  <div>
+    <h2> Visual design </h2>
+    <picture>
+    <source srcset="portfolio/img/Evermind_visualdesign@1x.png" media="(max-width:767px)">
+    <img src="portfolio/img/Evermind_visualdesign@1x.png" alt="Visual design">
+  </picture>
+</div>
+<div>
+  <h3>High fedility wireframes</h3>
+  <picture>
+  <source srcset="portfolio/img/Evermind_highfedilityscreens@1x.png" media="(max-width:767px)">
+  <img src="portfolio/img/Evermind_highfedilityscreens@1x.png" alt="High fedility wireframes">
+</picture>
+</div>
+<h3>Conclusion</h3>
+<picture>
+<source srcset="portfolio/img/Evermind_conclusion@1x.jpg" media="(max-width:767px)">
+<img src="portfolio/img/Evermind_conclusion@1x.jpg" alt="Conclusion">
+</picture>
+</div>
 </main>
     <footer>
       <h2>Get in Touch</h2>
