Revert "Update project link on index"
This reverts commit c7f525b8bf7c883510cb94a99746471528ff2eec.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <source srcset="img/evermind/Evermind@1x.jpg" media="(max-width:767px)">
   <img src="img/evermind/Evermind@2x.jpg" alt="evermind mockup">
 </picture>
-        <a href="evermind.html">Read more</a><!-- button or link label -->
+        <a href="">Read more</a><!-- button or link label -->
       </div><!-- end second column -->
       <div>
         <!-- open second column (used for text) -->
