Updated font to roboto and ID

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang"eng" dir"ltr">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="author" content="Pranali Linge">
   <meta name="description" content="UX/UI designer,user interaction designer">
@@ -23,7 +29,8 @@
     </div>
   </header>
   <main>
-    <div></div>
+    <div id="hero">
+    <div class="container">
     <div>
       <h1>Hi,I’m Pranali Linge, a UX/UI designer with a background in Industrial design.</h1>
       <p>
@@ -41,7 +48,8 @@
           <img src="http://via.placeholder.com/1200x800" alt="My Image">
         </picture>
       </div><!-- end first column -->
-      <div>
+      <    <div id="work">
+          <div class="container">
         <!-- open second column (used for text) -->
         <h3>Evermind</h3><!-- heading for the project -->
         <p>
@@ -52,7 +60,7 @@
   <source srcset="img/evermind/Evermind@1x.jpg" media="(max-width:767px)">
   <img src="img/evermind/Evermind@2x.jpg" alt="evermind mockup">
 </picture>
-        <a href="">Read more</a><!-- button or link label -->
+        <a href="#" class="button">Read more</a><!-- button or link label -->
       </div><!-- end second column -->
       <div>
         <!-- open second column (used for text) -->
@@ -65,16 +73,19 @@
   <source srcset="img/maimilk/maimilk@1x.jpg" media="(max-width:767px)">
   <img src="img/maimilk/maimilk@2x.jpg" alt="maimilk mockup">
 </picture>
-<a href="">Read more</a><!-- button or link label -->
+<a href="#" class="button">Read more</a> button or link label -->
       </div><!-- end second column -->
     </div><!-- end row that holds (2) columns for project -->
 </main>
     <footer>
+      <div id="contact"> 
+      <div class="container">
       <h2>Get in Touch</h2>
       <p>
         Do you like my work and want to discuss opportunities?
       <div>
-        <a href="">pranaliplinge@gmail.com</a>
+        <a href="pranaliplinge@gmail.com" class="button contact">Send me an email</a>
+
 <ul>
         <div><!--Social Media Layout and Placeholders-->
 <li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
