remove portfolio imag path reference

--- a/evermind.html
+++ b/evermind.html
@@ -9,8 +9,8 @@
   <title>UX/UI designer with background in industrial design
   </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="https://use.typekit.net/tjy6yui.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://use.typekit.net/tjy6yui.css">
   <link href="img/favicon.ico" rel="shortcut icon">
 </head>
 
@@ -35,7 +35,8 @@
           </style>
         </defs>
         <g id="Layer_2" data-name="Layer 2">
-          <g id="Layer_1-2" data-name="Layer 1"><text class="cls-1" transform="translate(0 12.14)">P<tspan class="cls-2" x="9.06" y="0">r</tspan>
+          <g id="Layer_1-2" data-name="Layer 1"><text class="cls-1" transform="translate(0 12.14)">P<tspan class="cls-2"
+                x="9.06" y="0">r</tspan>
               <tspan x="15.91" y="0">anali Lin</tspan>
               <tspan class="cls-3" x="73.85" y="0">g</tspan>
               <tspan x="80.88" y="0">e</tspan>
@@ -57,8 +58,8 @@
     </div>
     <div>
       <picture>
-        <source srcset="portfolio/img/evermindbrief@1x.jpg" media="(max-width:767px)">
-        <img src="portfolio/img/evermindbrief@1x.jpg" alt="Evermind">
+        <source srcset="img/evermindbrief@1x.jpg" media="(max-width:767px)">
+        <img src="img/evermind/evermind_brief@1x.png" alt="Evermind">
       </picture>
     </div>
     <div>
@@ -86,23 +87,24 @@
     <div>
       <h2>Process</h2>
       <picture>
-        <source srcset="portfolio/img/evermind/Evermindprocess@1x.jpg" media="(max-width:767px)">
-        <img src="portfolio/img/evermind/Evermindprocess@1x.jpg" alt="Evermind">
+        <source srcset="img/evermind/Evermindprocess@1x.jpg" media="(max-width:767px)">
+        <img src="img/evermind/Evermindprocess@1x.jpg" alt="Evermind">
       </picture>
     </div>
     <h2>Competitive analysis</h2>
-    <p> To start the project, I looked at two mental fitness building apps to analyse what is currently on the market.</p>
+    <p> To start the project, I looked at two mental fitness building apps to analyse what is currently on the market.
+    </p>
     <ul>
       <li> Talkspace</li>
       <li>Calm</li>
       <picture>
-        <source srcset="portfolio/img/Evermind_CA talkspace@1x.jpg" media="(max-width:767px)">
-        <img src="portfolio/img/Evermind_CA talkspace@1x" alt="Talkspace">
+        <source srcset="img/Evermind_CA talkspace@1x.jpg" media="(max-width:767px)">
+        <img src="img/Evermind_CA talkspace@1x" alt="Talkspace">
       </picture>
       <div>
         <picture>
-          <source srcset="portfolio/img/Evermind_CAcalm@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_CAcalm@1x.jpg" alt="calm">
+          <source srcset="img/Evermind_CAcalm@1x.jpg" media="(max-width:767px)">
+          <img src="img/Evermind_CAcalm@1x.jpg" alt="calm">
         </picture>
       </div>
       <div>
@@ -119,8 +121,8 @@
           process I gained a deeper understanding of how emotions such as frustration or confusion
           could lead to decreased trust in the product or abandonment of a task altogether. </p>
         <picture>
-          <source srcset="portfolio/img/Evermind_userjourneymap@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_userjourneymap@1x.jpg" alt="user journey map">
+          <source srcset="img/Evermind_userjourneymap@1x.jpg" media="(max-width:767px)">
+          <img src="img/Evermind_userjourneymap@1x.jpg" alt="user journey map">
         </picture>
       </div>
       <div>
@@ -130,8 +132,8 @@
           of the user flow it is possible to follow the users progress of a certain task through
           out a diagram. </p>
         <picture>
-          <source srcset="portfolio/img/Evermind_userflow@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_userflow@1x.jpg" alt="userflow">
+          <source srcset="img/Evermind_userflow@1x.jpg" media="(max-width:767px)">
+          <img src="img/Evermind_userflow@1x.jpg" alt="userflow">
         </picture>
       </div>
       <div>
@@ -140,22 +142,22 @@
           A closed card sorting with seven participants was conducted to iterate the
           sitemap and to get a better understanding of the user’s mental model.</p>
         <picture>
-          <source srcset="portfolio/img/Evermind_informationarchitect@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_informationarchitect@1x.jpg" alt="information acrchitecture">
+          <source srcset="img/Evermind_informationarchitect@1x.jpg" media="(max-width:767px)">
+          <img src="img/Evermind_informationarchitect@1x.jpg" alt="information acrchitecture">
         </picture>
       </div>
       <div>
         <h3> Cardsorting </h3>
         <picture>
-          <source srcset="portfolio/img/Evermind_cardsorting@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_cardsorting@1x.jpg" alt="Cardsorting">
+          <source srcset="img/Evermind_cardsorting@1x.jpg" media="(max-width:767px)">
+          <img src="img/Evermind_cardsorting@1x.jpg" alt="Cardsorting">
         </picture>
       </div>
       <div>
         <h3>Prototypes</h3>
         <picture>
-          <source srcset="portfolio/img/Evermind_Lowfedilitywireframes@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_Lowfedilitywireframes@1x.jpg" alt="low fedility wireframes">
+          <source srcset="img/Evermind_Lowfedilitywireframes@1x.jpg" media="(max-width:767px)">
+          <img src="img/Evermind_Lowfedilitywireframes@1x.jpg" alt="low fedility wireframes">
         </picture>
       </div>
       <div>
@@ -165,8 +167,8 @@
           according to the logic of my user flows.
           <p />
           <picture>
-            <source srcset="portfolio/img/Evermind_midfedility wireframes@1x.jpg" media="(max-width:767px)">
-            <img src="portfolio/img/Evermind_midfedility wireframes@1x.jpg" alt="low fedility wireframes">
+            <source srcset="img/Evermind_midfedility wireframes@1x.jpg" media="(max-width:767px)">
+            <img src="img/Evermind_midfedility wireframes@1x.jpg" alt="low fedility wireframes">
           </picture>
       </div>
       <div>
@@ -175,8 +177,8 @@
           app with real users to identify its strengths and weaknesses.
           <p />
           <picture>
-            <source srcset="portfolio/img/Evermind_usertesting@1x.jpg" media="(max-width:767px)">
-            <img src="portfolio/img/Evermind_usertesting@1x.jpg" alt="Usability testing">
+            <source srcset="img/Evermind_usertesting@1x.jpg" media="(max-width:767px)">
+            <img src="img/Evermind_usertesting@1x.jpg" alt="Usability testing">
           </picture>
         <h3>goal</h3>
         <p>We observed and measured whether users understood the app and its value and how to
@@ -184,28 +186,28 @@
           with mindsoul for the first time on mobile.</p>
         <h3>A/B preference test </h3>
         <picture>
-          <source srcset="portfolio/img/Evermind_AB preference test@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_AB preference test@1x" alt="A/B preference test">
+          <source srcset="img/Evermind_AB preference test@1x.jpg" media="(max-width:767px)">
+          <img src="img/Evermind_AB preference test@1x" alt="A/B preference test">
         </picture>
       </div>
       <div>
         <h2> Visual design </h2>
         <picture>
-          <source srcset="portfolio/img/Evermind_visualdesign@1x.png" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_visualdesign@1x.png" alt="Visual design">
+          <source srcset="img/Evermind_visualdesign@1x.png" media="(max-width:767px)">
+          <img src="img/Evermind_visualdesign@1x.png" alt="Visual design">
         </picture>
       </div>
       <div>
         <h3>High fedility wireframes</h3>
         <picture>
-          <source srcset="portfolio/img/Evermind_highfedilityscreens@1x.png" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_highfedilityscreens@1x.png" alt="High fedility wireframes">
+          <source srcset="img/Evermind_highfedilityscreens@1x.png" media="(max-width:767px)">
+          <img src="img/Evermind_highfedilityscreens@1x.png" alt="High fedility wireframes">
         </picture>
       </div>
       <h3>Conclusion</h3>
       <picture>
-        <source srcset="portfolio/img/Evermind_conclusion@1x.jpg" media="(max-width:767px)">
-        <img src="portfolio/img/Evermind_conclusion@1x.jpg" alt="Conclusion">
+        <source srcset="img/Evermind_conclusion@1x.jpg" media="(max-width:767px)">
+        <img src="img/Evermind_conclusion@1x.jpg" alt="Conclusion">
       </picture>
       </div>
   </main>
@@ -221,7 +223,8 @@
           <li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
           <img src="<?xml version=" 1.0" encoding="utf-8" ?>
           <!-- Generator: Adobe Illustrator 26.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
             <style type="text/css">
               .st0 {
                 fill: #020203;
@@ -242,7 +245,8 @@
           <li><a href="https://www.behance.net/pranali3" target="_blank"></li>
           <img src="<?xml version=" 1.0" encoding="utf-8" ?>
           <!-- Generator: Adobe Illustrator 26.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
             <style type="text/css">
               .st0 {
                 fill: #020203;
@@ -272,7 +276,8 @@
           <li><a href="https://dribbble.com/pranalilinge"></li>
           <img src="<?xml version=" 1.0" encoding="utf-8" ?>
           <!-- Generator: Adobe Illustrator 26.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
             <style type="text/css">
               .st0 {
                 fill: #020203;
