--- a/about.html
+++ b/about.html
@@ -2,29 +2,37 @@
 <html lang"eng" dir"ltr">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="author" content="Pranali Linge">
-  <meta name="description" content="UX/UI designer,user interaction designer">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"> 
-  <title>About Pranali Linge
-  </title>
-<link href="img/favicon.ico" rel="shortcut icon">
+	<meta charset="utf-8">
+	<!-- Setting the Viewport in HTML -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>UX/UI designer with background in industrial design</title>
+	<!-- add normalize below -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+	<!-- add custom font here -->
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+	<!-- we will continue to use our style.css file for styling -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
+
 <body>
-  <header>
-    <div> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 88.25 16.3"><defs><style>.cls-1{font-size:14.29px;fill:#1d1d1b;font-family:AbrilFatface-Regular, Abril Fatface;}.cls-2{letter-spacing:-0.02em;}.cls-3{letter-spacing:-0.03em;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><text class="cls-1" transform="translate(0 12.14)">P<tspan class="cls-2" x="9.06" y="0">r</tspan><tspan x="15.91" y="0">anali Lin</tspan><tspan class="cls-3" x="73.85" y="0">g</tspan><tspan x="80.88" y="0">e</tspan></text></g></g></svg>
-      <nav>
-        <ul>
-          <li><a href="index.html">Work</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      </nav>
-    </div>
-  </header>
+	<header>
+		<div class="container">
+			<!-- example navigation -->
+			<nav>
+				<div>
+					<a href="index.html"> </a>
+					<img src="img/favicon.ico.jpg" class="logo" alt="Pranali Linge">
+					<ul class="navigation">
+						<a class="menu-link" href="work.html">Work</a>
+						<a class="menu-link" href="about.html">About</a>
+						<a class="menu-link" href="#contact">Contact</a>
+					</ul>
+			</nav>
+			<!-- example navigation end -->
+	</header>
+
   <Main>
     <div>
     <div>
