--- a/evermind.html
+++ b/evermind.html
@@ -2,111 +2,93 @@
 <html lang"eng" dir"ltr">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="author" content="Pranali Linge">
-  <meta name="description" content="UX/UI designer,user interaction designer">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>UX/UI designer with background in industrial design
-  </title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="https://use.typekit.net/tjy6yui.css">
-  <link href="img/favicon.ico" rel="shortcut icon">
+	<meta charset="utf-8">
+	<!-- Setting the Viewport in HTML -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>UX/UI designer with background in industrial design</title>
+	<!-- add normalize below -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+	<!-- add custom font here -->
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+	<!-- we will continue to use our style.css file for styling -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 
 <body>
-  <header>
-    <div> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 88.25 16.3">
-        <defs>
-          <style>
-            .cls-1 {
-              font-size: 14.29px;
-              fill: #1d1d1b;
-              font-family: AbrilFatface-Regular, Abril Fatface;
-            }
+	<header>
+		<div class="container">
+			<!-- example navigation -->
+			<nav>
+				<div>
+					<a href="evermind.html"> </a>
+					<img src="img/favicon.ico.jpg" class="logo" alt="Pranali Linge">
+					<ul class="navigation">
+						<a class="menu-link" href="work.html">Work</a>
+						<a class="menu-link" href="about.html">About</a>
+						<a class="menu-link" href="#contact">Contact</a>
+					</ul>
+			</nav>
+			<!-- example navigation end -->
+	</header>
 
-            .cls-2 {
-              letter-spacing: -0.02em;
-            }
-
-            .cls-3 {
-              letter-spacing: -0.03em;
-            }
-          </style>
-        </defs>
-        <g id="Layer_2" data-name="Layer 2">
-          <g id="Layer_1-2" data-name="Layer 1"><text class="cls-1" transform="translate(0 12.14)">P<tspan class="cls-2" x="9.06" y="0">r</tspan>
-              <tspan x="15.91" y="0">anali Lin</tspan>
-              <tspan class="cls-3" x="73.85" y="0">g</tspan>
-              <tspan x="80.88" y="0">e</tspan>
-            </text></g>
-        </g>
-      </svg>
-      <nav>
-        <ul>
-          <li><a href="index.html">Work</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
   <main>
     <div>
       <h1>Evermind</h1>
     </div>
     <div>
       <picture>
-        <source srcset="portfolio/img/evermindbrief@1x.jpg" media="(max-width:767px)">
-        <img src="portfolio/img/evermindbrief@1x.jpg" alt="Evermind">
+        <source srcset="img/evermind/evermind_brief@1x.png" media="(max-width:767px)" />
+        <img src="img/evermind/evermind_brief@1x.png" alt="Evermind">
       </picture>
     </div>
     <div>
-      <h2>Brief</h2>
+      <h3>Brief</h3>
       <p> With Evermind, you can find quick audio and video guides of exercises
         for anxiety, sleep issues, stress, and boosting your self-esteem.
       </p>
     </div>
     <div>
-      <h2>Challenge</h2>
+      <h3>Challenge</h3>
       <p> In light of the overall growth in virtual activities since 2020, along
         with the damaging impact that COVID-19 has had on individual mental health,
         I wanted to contribute to a product space that can assist users in acquiring
         and maintaining mental fitness.</p>
     </div>
-    <h2>Role</h2>
+    <h3>Role</h3>
     <p> UX research, UX design, Visual design </p>
-    <h2>Duration </h2>
+    <h3>Duration </h3>
     <p>5 months </p>
-    <h2>Tools </h2>
+    <h3>Tools </h3>
     <p>
       <li>Figma</li>
       <li>Adobe illustrator</li>
       <li>Adobe photoshop</li>
     <div>
-      <h2>Process</h2>
+      <h3>Process</h3>
       <picture>
-        <source srcset="portfolio/img/evermind/Evermindprocess@1x.jpg" media="(max-width:767px)">
-        <img src="portfolio/img/evermind/Evermindprocess@1x.jpg" alt="Evermind">
+        <source srcset="img/evermind/evermind_process@1x.png" media="(max-width:767px)">
+        <img src="img/evermind/evermind_process@1x.png" alt="Evermind">
       </picture>
     </div>
-    <h2>Competitive analysis</h2>
+    <h3>Competitive analysis</h3>
     <p> To start the project, I looked at two mental fitness building apps to analyse what is currently on the market.</p>
     <ul>
       <li> Talkspace</li>
       <li>Calm</li>
       <picture>
-        <source srcset="portfolio/img/Evermind_CA talkspace@1x.jpg" media="(max-width:767px)">
-        <img src="portfolio/img/Evermind_CA talkspace@1x" alt="Talkspace">
+        <source srcset="img/evermind/evermind_CA talkspace@1x.png" media="(max-width:767px)">
+        <img src="img/evermind/evermind_CA talkspace@1x.png" alt="Talkspace">
       </picture>
       <div>
         <picture>
-          <source srcset="portfolio/img/Evermind_CAcalm@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_CAcalm@1x.jpg" alt="calm">
+          <source srcset="img/evermind/evermind_CAcalm@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_CAcalm@1x.png" alt="calm">
         </picture>
       </div>
       <div>
-        <h2> User research </h2>
+        <h3> User research </h3>
         <p> United the key insights from the research of competitor apps and observational
           data from the user interviews to determine which direction to take with my project.
           I decided to ideate and design an application that directs the user through audio
@@ -119,8 +101,8 @@
           process I gained a deeper understanding of how emotions such as frustration or confusion
           could lead to decreased trust in the product or abandonment of a task altogether. </p>
         <picture>
-          <source srcset="portfolio/img/Evermind_userjourneymap@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_userjourneymap@1x.jpg" alt="user journey map">
+            <source srcset="img/evermind/evermind_userjourneymap@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_userjourneymap@1x.png" alt="user journey map">
         </picture>
       </div>
       <div>
@@ -130,8 +112,8 @@
           of the user flow it is possible to follow the users progress of a certain task through
           out a diagram. </p>
         <picture>
-          <source srcset="portfolio/img/Evermind_userflow@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_userflow@1x.jpg" alt="userflow">
+          <source srcset="img/evermind/evermind_userflow@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_userflow@1x.png" alt="userflow">
         </picture>
       </div>
       <div>
@@ -140,22 +122,22 @@
           A closed card sorting with seven participants was conducted to iterate the
           sitemap and to get a better understanding of the user’s mental model.</p>
         <picture>
-          <source srcset="portfolio/img/Evermind_informationarchitect@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_informationarchitect@1x.jpg" alt="information acrchitecture">
+          <source srcset="img/evermind/evermind_informationarchitect@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_informationarchitect@1x.png" alt="information acrchitecture">
         </picture>
       </div>
       <div>
         <h3> Cardsorting </h3>
         <picture>
-          <source srcset="portfolio/img/Evermind_cardsorting@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_cardsorting@1x.jpg" alt="Cardsorting">
+          <source srcset="img/evermind/evermind_cardsorting@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_cardsorting@1x.png" alt="Cardsorting">
         </picture>
       </div>
       <div>
         <h3>Prototypes</h3>
         <picture>
-          <source srcset="portfolio/img/Evermind_Lowfedilitywireframes@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_Lowfedilitywireframes@1x.jpg" alt="low fedility wireframes">
+          <source srcset="img/evermind/evermind_Lowfedilitywireframes@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_Lowfedilitywireframes@1x.png" alt="low fedility wireframes">
         </picture>
       </div>
       <div>
@@ -165,8 +147,8 @@
           according to the logic of my user flows.
           <p />
           <picture>
-            <source srcset="portfolio/img/Evermind_midfedility wireframes@1x.jpg" media="(max-width:767px)">
-            <img src="portfolio/img/Evermind_midfedility wireframes@1x.jpg" alt="low fedility wireframes">
+            <source srcset="img/evermind/evermind_midfedility wireframes@1x.png" media="(max-width:767px)">
+            <img src="img/evermind/evermind_midfedility wireframes@1x.png" alt="low fedility wireframes">
           </picture>
       </div>
       <div>
@@ -175,8 +157,8 @@
           app with real users to identify its strengths and weaknesses.
           <p />
           <picture>
-            <source srcset="portfolio/img/Evermind_usertesting@1x.jpg" media="(max-width:767px)">
-            <img src="portfolio/img/Evermind_usertesting@1x.jpg" alt="Usability testing">
+            <source srcset="img/evermind/evermind_usertesting@1x.png" media="(max-width:767px)">
+            <img src="img/evermind/evermind_usertesting@1x.png" alt="Usability testing">
           </picture>
         <h3>goal</h3>
         <p>We observed and measured whether users understood the app and its value and how to
@@ -184,120 +166,61 @@
           with mindsoul for the first time on mobile.</p>
         <h3>A/B preference test </h3>
         <picture>
-          <source srcset="portfolio/img/Evermind_AB preference test@1x.jpg" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_AB preference test@1x" alt="A/B preference test">
+          <source srcset="img/evermind/evermind_AB preference test@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_AB preference test@1x.png" alt="A/B preference test">
         </picture>
       </div>
       <div>
         <h2> Visual design </h2>
         <picture>
-          <source srcset="portfolio/img/Evermind_visualdesign@1x.png" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_visualdesign@1x.png" alt="Visual design">
+          <source srcset="img/evermind/evermind_visualdesign@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_visualdesign@1x.png" alt="Visual design">
         </picture>
       </div>
       <div>
         <h3>High fedility wireframes</h3>
         <picture>
-          <source srcset="portfolio/img/Evermind_highfedilityscreens@1x.png" media="(max-width:767px)">
-          <img src="portfolio/img/Evermind_highfedilityscreens@1x.png" alt="High fedility wireframes">
+          <source srcset="img/evermind/evermind_highfedilityscreens@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_highfedilityscreens@1x.png" alt="High fedility wireframes">
         </picture>
       </div>
       <h3>Conclusion</h3>
       <picture>
-        <source srcset="portfolio/img/Evermind_conclusion@1x.jpg" media="(max-width:767px)">
-        <img src="portfolio/img/Evermind_conclusion@1x.jpg" alt="Conclusion">
+        <source srcset="img/evermind/evermind_conclusion@1x.png" media="(max-width:767px)">
+        <img src="img/evermind/evermind_conclusion@1x.png" alt="Conclusion">
       </picture>
       </div>
   </main>
-  <footer>
-    <h2>Get in Touch</h2>
-    <p>
-      Do you like my work and want to discuss opportunities?
-    <div>
-      <a href="">pranaliplinge@gmail.com</a>
-      <ul>
-        <div>
-          <!--Social Media Layout and Placeholders-->
-          <li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
-          <img src="<?xml version=" 1.0" encoding="utf-8" ?>
-          <!-- Generator: Adobe Illustrator 26.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
-            <style type="text/css">
-              .st0 {
-                fill: #020203;
-              }
 
-              .st1 {
-                fill: #FFFFFF;
-              }
-            </style>
-            <path class="st0" d="M1.2,23.2V9.3c0-4.2,3.4-7.6,7.6-7.6h13.9c4.2,0,7.6,3.4,7.6,7.6l0,13.9c0,4.2-3.4,7.6-7.6,7.6l-13.9,0
-            	C4.7,30.9,1.2,27.5,1.2,23.2z" />
-            <path class="st1" d="M9.7,13.5h2.8v9.1H9.7V13.5z M11.1,9c0.9,0,1.6,0.7,1.6,1.6c0,0.9-0.7,1.6-1.6,1.6c-0.9,0-1.6-0.7-1.6-1.6
-            	C9.5,9.8,10.2,9,11.1,9" />
-            <path class="st1" d="M14.3,13.5H17v1.2h0c0.4-0.7,1.3-1.5,2.7-1.5c2.9,0,3.4,1.9,3.4,4.3v5h-2.8v-4.4c0-1.1,0-2.4-1.5-2.4
-            	c-1.5,0-1.7,1.1-1.7,2.3v4.5h-2.8V13.5z" />
-          </svg>
-          </a>
-          <li><a href="https://www.behance.net/pranali3" target="_blank"></li>
-          <img src="<?xml version=" 1.0" encoding="utf-8" ?>
-          <!-- Generator: Adobe Illustrator 26.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
-            <style type="text/css">
-              .st0 {
-                fill: #020203;
-              }
-
-              .st1 {
-                fill: #FFFFFF;
-              }
-            </style>
-            <path class="st0" d="M1.6,23.3l0-13.9c0-4.2,3.4-7.6,7.6-7.6h13.9c4.2,0,7.6,3.4,7.6,7.6v13.9c0,4.2-3.4,7.6-7.6,7.6H9.3
-            	C5.1,31,1.6,27.5,1.6,23.3z" />
-            <path class="st1" d="M17.1,19c0,0.4-0.1,0.8-0.3,1.2c-0.2,0.3-0.4,0.6-0.7,0.8c-0.3,0.2-0.7,0.4-1.1,0.5c-0.4,0.1-0.8,0.2-1.3,0.2
-            	H8.6V11.2h5.6c0.4,0,0.7,0.1,1,0.2c0.3,0.2,0.5,0.4,0.8,0.6c0.2,0.3,0.4,0.5,0.5,0.9c0.1,0.3,0.2,0.6,0.2,1c0,0.5-0.1,1-0.4,1.4
-            	c-0.3,0.5-0.6,0.8-1.1,1c0.6,0.2,1.1,0.5,1.4,1C16.9,17.7,17.1,18.3,17.1,19z M10.6,12.9v2.7h2.7c0.3,0,0.6-0.1,0.9-0.4
-            	c0.2-0.2,0.4-0.6,0.4-1c0-0.4-0.1-0.7-0.3-1c-0.2-0.2-0.5-0.4-0.8-0.4H10.6z M15,18.6c0-0.2,0-0.4-0.1-0.5c-0.1-0.2-0.2-0.3-0.3-0.5
-            	c-0.1-0.1-0.2-0.2-0.4-0.3c-0.1-0.1-0.3-0.1-0.5-0.1h-3.1V20h3c0.2,0,0.4,0,0.5-0.1c0.2-0.1,0.3-0.2,0.4-0.3
-            	c0.1-0.1,0.2-0.3,0.3-0.4C15,19,15,18.8,15,18.6z" />
-            <path class="st1" d="M21.5,21.7c-0.6,0-1.2-0.1-1.6-0.3c-1-0.4-1.7-1.1-2-2.1c-0.2-0.5-0.3-1-0.3-1.5c0-0.5,0.1-1,0.3-1.5
-            	c0.4-1,1.1-1.7,2-2.1c0.5-0.2,1-0.3,1.7-0.3c0.6,0,1.2,0.1,1.6,0.3c1.6,0.7,2.3,2.2,2.3,3.9c0,0.1,0,0.2,0,0.3h-5.8
-            	c0,0.3,0.1,0.6,0.2,0.8c0.1,0.2,0.3,0.4,0.4,0.6c0.2,0.2,0.4,0.3,0.6,0.4c0.2,0.1,0.5,0.1,0.7,0.1c0.4,0,0.7-0.1,1.1-0.3
-            	c0.3-0.2,0.6-0.4,0.7-0.7l1.7,0.5c-0.3,0.6-0.7,1-1.3,1.4C23.1,21.5,22.3,21.7,21.5,21.7z M23.4,17.2c0-0.6-0.3-1-0.6-1.4
-            	c-0.4-0.3-0.8-0.5-1.3-0.5c-0.3,0-0.5,0-0.7,0.1c-0.2,0.1-0.4,0.2-0.6,0.4c-0.2,0.2-0.3,0.4-0.4,0.6c-0.1,0.2-0.2,0.5-0.2,0.8
-            	L23.4,17.2L23.4,17.2z" />
-            <path class="st1" d="M19,11.7h5v1.3h-5V11.7z" />
-          </svg>
-          </a>
-          <li><a href="https://dribbble.com/pranalilinge"></li>
-          <img src="<?xml version=" 1.0" encoding="utf-8" ?>
-          <!-- Generator: Adobe Illustrator 26.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
-            <style type="text/css">
-              .st0 {
-                fill: #020203;
-              }
-
-              .st1 {
-                fill: #FFFFFF;
-              }
-            </style>
-            <path class="st0" d="M1.4,23V9c0-4.2,3.4-7.6,7.6-7.6l13.9,0c4.2,0,7.6,3.4,7.6,7.6V23c0,4.2-3.4,7.6-7.6,7.6l-13.9,0
-            	C4.9,30.6,1.4,27.2,1.4,23z" />
-            <path class="st1" d="M15.9,7.8c-4.5,0-8.2,3.7-8.2,8.2s3.7,8.2,8.2,8.2c4.5,0,8.2-3.7,8.2-8.2C24.1,11.5,20.4,7.8,15.9,7.8L15.9,7.8
-            	z M21.3,11.7c0.9,1.2,1.5,2.6,1.5,4.2c-0.3-0.1-1.6-0.3-3.2-0.3c-0.5,0-1,0-1.6,0.1c0-0.1-0.1-0.2-0.1-0.3c-0.1-0.3-0.3-0.7-0.4-1
-            	C19.9,13.4,21,12,21.3,11.7L21.3,11.7z M15.9,9.1c1.8,0,3.4,0.7,4.6,1.7c-0.2,0.3-1.2,1.6-3.6,2.5c-1.1-2-2.3-3.6-2.6-4
-            	C14.8,9.1,15.3,9.1,15.9,9.1L15.9,9.1z M12.9,9.7c0.2,0.3,1.4,2,2.5,4c-3,0.8-5.6,0.8-6.3,0.8H9.1C9.5,12.4,11,10.7,12.9,9.7
-            	L12.9,9.7z M8.9,16c0-0.1,0-0.1,0-0.2c0,0,0.1,0,0.2,0c0.9,0,3.9-0.1,6.9-1c0.2,0.4,0.4,0.7,0.5,1.1c-0.1,0-0.2,0-0.2,0.1
-            	c-3.5,1.1-5.4,4.1-5.7,4.6C9.6,19.4,8.9,17.8,8.9,16L8.9,16z M15.9,23c-1.6,0-3.1-0.5-4.2-1.4c0.2-0.4,1.6-3,5.4-4.3c0,0,0,0,0,0
-            	c1,2.5,1.4,4.6,1.5,5.2C17.7,22.8,16.8,23,15.9,23L15.9,23z M19.8,21.7c-0.1-0.5-0.5-2.5-1.3-4.9c0.5-0.1,1-0.1,1.4-0.1
-            	c1.5,0,2.6,0.3,2.9,0.4C22.4,19,21.3,20.7,19.8,21.7L19.8,21.7z" />
-          </svg>
-          </a>
-      </ul>
-      <p>Copyright Pranali Linge 2022</p>
-    </div>
-  </footer>
+  	<footer>
+  		<div class="container">
+  			<h2>Get in Touch</h2>
+  			<p>
+  				Do you like my work and want to discuss opportunities?
+  			<div>
+  				<a href="mailto:pranaliplinge@gmail.com" class="button contact">Send me an email</a>
+  				<ul>
+  					<div>
+  						<!--Social Media Layout and Placeholders-->
+  						<li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
+  						<picture>
+  							<source srcset="img/socialmedia/linkedin.png" media="(max-width:32px)">
+  							<img src="img/socialmedia/linkedin.png" alt="linkedin">
+  						</picture>
+  						<li><a href="https://www.behance.net/pranali3" target="_blank"></li>
+  						<picture>
+  							<source srcset="img/socialmedia/behance.png" media="(max-width:32px)">
+  							<img src="img/socialmedia/behance.png" alt="behance">
+  						</picture>
+  						<li><a href="https://dribbble.com/pranalilinge" target="_blank"></li>
+  						<picture>
+  							<source srcset="img/socialmedia/dribble.png" media="(max-width:32px)">
+  							<img src="img/socialmedia/dribble.png" alt="dribble">
+  						</picture>
+  				</ul>
+  				<p>Copyright Pranali Linge 2022</p>
+  			</div>
+  	</footer>
 </body>
 
 </html>
