Updated social media images

--- a/index.html
+++ b/index.html
@@ -17,77 +17,85 @@
 </head>
 
 <body>
+	 <div id="about-page">
+		 			<div class="container">
 	<header>
 		<div class="container">
-		<!-- example navigation -->
-		<nav>
+			<!-- example navigation -->
+			<nav>
+				<div>
+					<a href="index.html"> </a>
+					<img src="img/favicon.ico.jpg" class="logo" alt="Pranali Linge">
+					<ul class="navigation">
+						<a class="menu-link" href="work.html">Work</a>
+						<a class="menu-link" href="about.html">About</a>
+						<a class="menu-link" href="#contact">Contact</a>
+					</ul>
+			</nav>
+			<!-- example navigation end -->
+	</header>
+
+	<main>
+		<div id="hero">
+			<div class="container">
+				<h1> Hello I’m Pranali Linge, a UX/UI designer with a background in Industrial design.</h1>
+				<p>Experienced in communicating ideas and empathizing with people to create user-centric design solutions. I completed my UX design course with specialization in
+					frontend development at Career foundry, Berlin. I’m currently looking for career opportunities, where I can thrive in my
+					role and continue to grow as a UI/UX designer.</p>
+				<div id="work">
+					<div class="container">
+
+						<h2>My Work</h2>
+						<div class="row">
+  <div class="col-md-6">
+<picture>
+								<source srcset="img/evermind/evermind@2x.jpg">
+								<img src="img/evermind/evermind@2x.jpg" alt="evermind">
+									</picture>
+								<h1>Evermind</h1>
+								<p> With Evermind, you can find quick audio and video guides of exercises for anxiety, sleep issues, stress, and boosting your self-esteem. The application taught the importance of all the user research phases on application design and it’s imapct.</p>
+								<a href="evermind.html" class="button">Read more</a>
+
+								<picture>
+								<source srcset="img\maimilk\Maimilk_brief@1x.png">
+								<img src="img\maimilk\Maimilk_brief@1x.png" alt="maimilk">
+								<a href="" class="button">Read more</a>
+							</picture>
+							<h1>Maimilk</h1>
+							<p>Mai milk was one of the largest dairy farms in central India. They produce farm fresh milk and milk cows at an automated milking parlor. They want to bring their farm fresh milk straight from their farm to their consumers.</p>
+	<a href="" class="button">Read more</a>
+						</div>
+	</main>
+
+	<footer>
+		<div class="container">
+			<h2>Get in Touch</h2>
+			<p>
+				Do you like my work and want to discuss opportunities?
 			<div>
-				<a href="index.html"> </a>
-	<img src="img\logo\pranalilingelogo.jpg" class="logo" alt="Pranali Linge">
-         <ul class="navigation">
-<a class="menu-link" href="work.html">Work</a>
-    <a class="menu-link" href="about.html">About</a>
-      <a class="menu-link" href="#contact">Contact</a>
-        </ul>
-      </nav>
-      <!-- example navigation end -->
-    </header>
-
-    <main>
-			<div id="hero">
-	  <div class="container">
-        <h1> Hello I’m Pranali Linge, a UX/UI designer with a background in Industrial design.</h1>
-        <p>Experienced in communicating ideas and empathizing with people to create user-centric design solutions. I completed my UX design course with specialization in
-          frontend development at Career foundry, Berlin. I’m currently looking for career opportunities, where I can thrive in my
-          role and continue to grow as a UI/UX designer.</p>
-					<div id="work">
-  <div class="container">
-    <h2>My Work</h2>
-      <div class="row">
-        <h1>Evermind</h1>
-				<p> With Evermind, you can find quick audio and video guides of exercises for anxiety, sleep issues, stress, and boosting your self-esteem. The application taught the importance of all the user research phases on application design and it’s imapct.</p>
-				<picture>
-				<source srcset="img\evermind\evermindhomepage.jpg.jpg">
-				<img src="img\evermind\evermindhomepage.jpg.jpg" alt="evermind">
-				<a href="evermind.html" class="button">Read more</a>
-				</picture>
-				<h1>Maimilk</h1>
-				<p>Mai milk was one of the largest dairy farms in central India. They produce farm fresh milk and milk cows at an automated milking parlor. They want to bring their farm fresh milk straight from their farm to their consumers.</p>
-				<picture>
-				<source srcset="img\maimilk\Maimilk_brief@1x.png">
-				<img src="img\maimilk\Maimilk_brief@1x.png" alt="maimilk">
-				<a href=""class="button">Read more</a>
-				</picture>
-      </div>
-    </main>
-
-			<footer>
-				<div class="container">
-				<h2>Get in Touch</h2>
-	      <p>
-	        Do you like my work and want to discuss opportunities?
-	      <div>
-	      <a href="mailto:pranaliplinge@gmail.com" class="button contact">Send me an email</a>
-			<ul>
-					<div><!--Social Media Layout and Placeholders-->
-			<li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
-			<picture>
-			<source srcset="img/socialmedia/linkedin.png" media="(max-width:32px)">
-			<img src="img/socialmedia/linkedin.png" alt="linkedin">
-			</picture>
-			<li><a href="https://www.behance.net/pranali3" target="_blank"></li>
-			<picture>
-			<source srcset="img/socialmedia/behance.png" media="(max-width:32px)">
-			<img src="img/socialmedia/behance.png" alt="behance">
-			</picture>
-			<li><a href="https://dribbble.com/pranalilinge" target="_blank"></li>
-			<picture>
-			<source srcset="img/socialmedia/dribble.png" media="(max-width:32px)">
-			<img src="img/socialmedia/dribble.png" alt="dribble">
-			</picture>
-			</ul>
-			<p>Copyright Pranali Linge 2022</p>
+				<a href="mailto:pranaliplinge@gmail.com" class="button contact">Send me an email</a>
+				<ul>
+					<div>
+						<!--Social Media Layout and Placeholders-->
+						<li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
+						<picture>
+							<source srcset="img/socialmedia/linkedin.png" media="(max-width:32px)">
+							<img src="img/socialmedia/linkedin.png" alt="linkedin">
+						</picture>
+						<li><a href="https://www.behance.net/pranali3" target="_blank"></li>
+						<picture>
+							<source srcset="img/socialmedia/behance.png" media="(max-width:32px)">
+							<img src="img/socialmedia/behance.png" alt="behance">
+						</picture>
+						<li><a href="https://dribbble.com/pranalilinge" target="_blank"></li>
+						<picture>
+							<source srcset="img/socialmedia/dribble.png" media="(max-width:32px)">
+							<img src="img/socialmedia/dribble.png" alt="dribble">
+						</picture>
+				</ul>
+				<p>Copyright Pranali Linge 2022</p>
 			</div>
-			</footer>
-	</body>
+	</footer>
+</body>
+
 </html>
