--- a/about.html
+++ b/about.html
@@ -44,7 +44,8 @@
       <img src="img/homepage/aboutme@2.jpg" alt="My Image">
     </picture>
     </div>
-    <div>
+    <div class="row">
+		<div class="col-md-6">
       <h2> My story</h2>
       <p>Hi, I’m Pranali Linge, and I’m a UX/UI designer with experience in Industrial design.
         During my tenure as an industrial designer has thought me how the world is enhancing from
@@ -73,93 +74,35 @@ I’m currently available for full-time work. If you want to say hi, please get 
     </div>
   </div>
   </main>
-    <footer>
-      <h2>Get in Touch</h2>
-      <p>
-        Do you like my work and want to discuss opportunities?
-      <div>
-        <a href="">pranaliplinge@gmail.com</a>
-<ul>
-        <div><!--Social Media Layout and Placeholders-->
-<li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
-<img src="<?xml version=" 1.0" encoding="utf-8" ?>
-<!-- Generator: Adobe Illustrator 26.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
-  <style type="text/css">
-    .st0 {
-      fill: #020203;
-    }
 
-    .st1 {
-      fill: #FFFFFF;
-    }
-  </style>
-  <path class="st0" d="M1.2,23.2V9.3c0-4.2,3.4-7.6,7.6-7.6h13.9c4.2,0,7.6,3.4,7.6,7.6l0,13.9c0,4.2-3.4,7.6-7.6,7.6l-13.9,0
-            	C4.7,30.9,1.2,27.5,1.2,23.2z" />
-  <path class="st1" d="M9.7,13.5h2.8v9.1H9.7V13.5z M11.1,9c0.9,0,1.6,0.7,1.6,1.6c0,0.9-0.7,1.6-1.6,1.6c-0.9,0-1.6-0.7-1.6-1.6
-            	C9.5,9.8,10.2,9,11.1,9" />
-  <path class="st1" d="M14.3,13.5H17v1.2h0c0.4-0.7,1.3-1.5,2.7-1.5c2.9,0,3.4,1.9,3.4,4.3v5h-2.8v-4.4c0-1.1,0-2.4-1.5-2.4
-            	c-1.5,0-1.7,1.1-1.7,2.3v4.5h-2.8V13.5z" />
-</svg>
-</a>
-<li><a href="https://www.behance.net/pranali3" target="_blank"></li>
-<img src="<?xml version=" 1.0" encoding="utf-8" ?>
-<!-- Generator: Adobe Illustrator 26.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
-  <style type="text/css">
-    .st0 {
-      fill: #020203;
-    }
-
-    .st1 {
-      fill: #FFFFFF;
-    }
-  </style>
-  <path class="st0" d="M1.6,23.3l0-13.9c0-4.2,3.4-7.6,7.6-7.6h13.9c4.2,0,7.6,3.4,7.6,7.6v13.9c0,4.2-3.4,7.6-7.6,7.6H9.3
-            	C5.1,31,1.6,27.5,1.6,23.3z" />
-  <path class="st1" d="M17.1,19c0,0.4-0.1,0.8-0.3,1.2c-0.2,0.3-0.4,0.6-0.7,0.8c-0.3,0.2-0.7,0.4-1.1,0.5c-0.4,0.1-0.8,0.2-1.3,0.2
-            	H8.6V11.2h5.6c0.4,0,0.7,0.1,1,0.2c0.3,0.2,0.5,0.4,0.8,0.6c0.2,0.3,0.4,0.5,0.5,0.9c0.1,0.3,0.2,0.6,0.2,1c0,0.5-0.1,1-0.4,1.4
-            	c-0.3,0.5-0.6,0.8-1.1,1c0.6,0.2,1.1,0.5,1.4,1C16.9,17.7,17.1,18.3,17.1,19z M10.6,12.9v2.7h2.7c0.3,0,0.6-0.1,0.9-0.4
-            	c0.2-0.2,0.4-0.6,0.4-1c0-0.4-0.1-0.7-0.3-1c-0.2-0.2-0.5-0.4-0.8-0.4H10.6z M15,18.6c0-0.2,0-0.4-0.1-0.5c-0.1-0.2-0.2-0.3-0.3-0.5
-            	c-0.1-0.1-0.2-0.2-0.4-0.3c-0.1-0.1-0.3-0.1-0.5-0.1h-3.1V20h3c0.2,0,0.4,0,0.5-0.1c0.2-0.1,0.3-0.2,0.4-0.3
-            	c0.1-0.1,0.2-0.3,0.3-0.4C15,19,15,18.8,15,18.6z" />
-  <path class="st1" d="M21.5,21.7c-0.6,0-1.2-0.1-1.6-0.3c-1-0.4-1.7-1.1-2-2.1c-0.2-0.5-0.3-1-0.3-1.5c0-0.5,0.1-1,0.3-1.5
-            	c0.4-1,1.1-1.7,2-2.1c0.5-0.2,1-0.3,1.7-0.3c0.6,0,1.2,0.1,1.6,0.3c1.6,0.7,2.3,2.2,2.3,3.9c0,0.1,0,0.2,0,0.3h-5.8
-            	c0,0.3,0.1,0.6,0.2,0.8c0.1,0.2,0.3,0.4,0.4,0.6c0.2,0.2,0.4,0.3,0.6,0.4c0.2,0.1,0.5,0.1,0.7,0.1c0.4,0,0.7-0.1,1.1-0.3
-            	c0.3-0.2,0.6-0.4,0.7-0.7l1.7,0.5c-0.3,0.6-0.7,1-1.3,1.4C23.1,21.5,22.3,21.7,21.5,21.7z M23.4,17.2c0-0.6-0.3-1-0.6-1.4
-            	c-0.4-0.3-0.8-0.5-1.3-0.5c-0.3,0-0.5,0-0.7,0.1c-0.2,0.1-0.4,0.2-0.6,0.4c-0.2,0.2-0.3,0.4-0.4,0.6c-0.1,0.2-0.2,0.5-0.2,0.8
-            	L23.4,17.2L23.4,17.2z" />
-  <path class="st1" d="M19,11.7h5v1.3h-5V11.7z" />
-</svg>
-</a>
-<li><a href="https://dribbble.com/pranalilinge"></li>
-<img src="<?xml version=" 1.0" encoding="utf-8" ?>
-<!-- Generator: Adobe Illustrator 26.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
-  <style type="text/css">
-    .st0 {
-      fill: #020203;
-    }
-
-    .st1 {
-      fill: #FFFFFF;
-    }
-  </style>
-  <path class="st0" d="M1.4,23V9c0-4.2,3.4-7.6,7.6-7.6l13.9,0c4.2,0,7.6,3.4,7.6,7.6V23c0,4.2-3.4,7.6-7.6,7.6l-13.9,0
-            	C4.9,30.6,1.4,27.2,1.4,23z" />
-  <path class="st1" d="M15.9,7.8c-4.5,0-8.2,3.7-8.2,8.2s3.7,8.2,8.2,8.2c4.5,0,8.2-3.7,8.2-8.2C24.1,11.5,20.4,7.8,15.9,7.8L15.9,7.8
-            	z M21.3,11.7c0.9,1.2,1.5,2.6,1.5,4.2c-0.3-0.1-1.6-0.3-3.2-0.3c-0.5,0-1,0-1.6,0.1c0-0.1-0.1-0.2-0.1-0.3c-0.1-0.3-0.3-0.7-0.4-1
-            	C19.9,13.4,21,12,21.3,11.7L21.3,11.7z M15.9,9.1c1.8,0,3.4,0.7,4.6,1.7c-0.2,0.3-1.2,1.6-3.6,2.5c-1.1-2-2.3-3.6-2.6-4
-            	C14.8,9.1,15.3,9.1,15.9,9.1L15.9,9.1z M12.9,9.7c0.2,0.3,1.4,2,2.5,4c-3,0.8-5.6,0.8-6.3,0.8H9.1C9.5,12.4,11,10.7,12.9,9.7
-            	L12.9,9.7z M8.9,16c0-0.1,0-0.1,0-0.2c0,0,0.1,0,0.2,0c0.9,0,3.9-0.1,6.9-1c0.2,0.4,0.4,0.7,0.5,1.1c-0.1,0-0.2,0-0.2,0.1
-            	c-3.5,1.1-5.4,4.1-5.7,4.6C9.6,19.4,8.9,17.8,8.9,16L8.9,16z M15.9,23c-1.6,0-3.1-0.5-4.2-1.4c0.2-0.4,1.6-3,5.4-4.3c0,0,0,0,0,0
-            	c1,2.5,1.4,4.6,1.5,5.2C17.7,22.8,16.8,23,15.9,23L15.9,23z M19.8,21.7c-0.1-0.5-0.5-2.5-1.3-4.9c0.5-0.1,1-0.1,1.4-0.1
-            	c1.5,0,2.6,0.3,2.9,0.4C22.4,19,21.3,20.7,19.8,21.7L19.8,21.7z" />
-</svg>
-</a>
-</ul>
-<p>Copyright Pranali Linge 2022</p>
-</div>
-</footer>
+  	<footer>
+  		<div class="container">
+  			<h2>Get in Touch</h2>
+  			<p>
+  				Do you like my work and want to discuss opportunities?
+  			<div>
+  				<a href="mailto:pranaliplinge@gmail.com" class="button contact">Send me an email</a>
+  				<ul>
+  					<div>
+  						<!--Social Media Layout and Placeholders-->
+  						<li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
+  						<picture>
+  							<source srcset="img/socialmedia/linkedin.png" media="(max-width:32px)">
+  							<img src="img/socialmedia/linkedin.png" alt="linkedin">
+  						</picture>
+  						<li><a href="https://www.behance.net/pranali3" target="_blank"></li>
+  						<picture>
+  							<source srcset="img/socialmedia/behance.png" media="(max-width:32px)">
+  							<img src="img/socialmedia/behance.png" alt="behance">
+  						</picture>
+  						<li><a href="https://dribbble.com/pranalilinge" target="_blank"></li>
+  						<picture>
+  							<source srcset="img/socialmedia/dribble.png" media="(max-width:32px)">
+  							<img src="img/socialmedia/dribble.png" alt="dribble">
+  						</picture>
+  				</ul>
+  				<p>Copyright Pranali Linge 2022</p>
+  			</div>
+  	</footer>
 </body>
 </html>
