fix social media icons width probelm

--- a/index.html
+++ b/index.html
@@ -94,24 +94,24 @@
             Do you like my work and want to discuss opportunities?
           <div>
             <a href="mailto:pranaliplinge@gmail.com" class="button contact">Send me an email</a>
-            <ul>
-              <div>
-                <!--Social Media Layout and Placeholders-->
-                <li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
-                <picture>
-                  <source srcset="img/socialmedia/linkedin.png" media="(max-width:32px)">
+            <ul class="social-links">
+              <!--Social Media Layout and Placeholders-->
+              <li>
+                <a href="https://www.linkedin.com/in/pranalilinge/" target="_blank">
                   <img src="img/socialmedia/linkedin.png" alt="linkedin">
-                </picture>
-                <li><a href="https://www.behance.net/pranali3" target="_blank"></li>
-                <picture>
-                  <source srcset="img/socialmedia/behance.png" media="(max-width:32px)">
+                </a>
+              </li>
+              <li>
+                <a href="https://www.behance.net/pranali3" target="_blank">
                   <img src="img/socialmedia/behance.png" alt="behance">
-                </picture>
-                <li><a href="https://dribbble.com/pranalilinge" target="_blank"></li>
-                <picture>
-                  <source srcset="img/socialmedia/dribble.png" media="(max-width:32px)">
-                  <img src="img/socialmedia/dribble.png" alt="dribble">
-                </picture>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://dribbble.com/pranalilinge" target="_blank">
+                  <img src="img/socialmedia/dribbble.png" alt="dribble">
+                </a>
+              </li>
             </ul>
             <p>Copyright Pranali Linge 2022</p>
           </div>
