--- a/evermind.html
+++ b/evermind.html
@@ -69,8 +69,8 @@
     <div>
       <h3>Process</h3>
       <picture>
-				<source srcset="img/evermind/Evermindprocess@1x.jpg" media="(max-width:767px)">
-        <img src="img/evermind/Evermindprocess@1x.jpg" alt="Evermind">
+				<source srcset="img/evermind/evermind_process@1x.png" media="(max-width:767px)">
+        <img src="img/evermind/evermind_process@1x.png" alt="Evermind">
       </picture>
     </div>
     <h3>Competitive analysis</h3>
@@ -79,13 +79,13 @@
       <li> Talkspace</li>
       <li>Calm</li>
 
-        <source srcset="img/Evermind_CA talkspace@1x.jpg" media="(max-width:767px)">
-        <img src="img/Evermind_CA talkspace@1x" alt="Talkspace">
+        <source srcset="img/evermind/evermind_CA talkspace@1x.png" media="(max-width:767px)">
+        <img src="img/evermind/evermind_CA talkspace@1x.png" alt="Talkspace">
       </picture>
       <div>
         <picture>
-          <source srcset="img/Evermind_CAcalm@1x.jpg" media="(max-width:767px)">
-          <img src="img/Evermind_CAcalm@1x.jpg" alt="calm">
+          <source srcset="img/evermind/evermind_CAcalm@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_CAcalm@1x.png" alt="calm">
         </picture>
       </div>
       <div>
@@ -102,8 +102,8 @@
           process I gained a deeper understanding of how emotions such as frustration or confusion
           could lead to decreased trust in the product or abandonment of a task altogether. </p>
         <picture>
-          <source srcset="img/Evermind_userjourneymap@1x.jpg" media="(max-width:767px)">
-          <img src="img/Evermind_userjourneymap@1x.jpg" alt="user journey map">
+          <source srcset="img/evermind/evermind_userjourneymap@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_userjourneymap@1x.png" alt="user journey map">
         </picture>
       </div>
       <div>
@@ -113,8 +113,8 @@
           of the user flow it is possible to follow the users progress of a certain task through
           out a diagram. </p>
         <picture>
-          <source srcset="img/Evermind_userflow@1x.jpg" media="(max-width:767px)">
-          <img src="img/Evermind_userflow@1x.jpg" alt="userflow">
+          <source srcset="img/evermind/evermind_userflow@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_userflow@1x.png" alt="userflow">
         </picture>
       </div>
       <div>
@@ -123,22 +123,22 @@
           A closed card sorting with seven participants was conducted to iterate the
           sitemap and to get a better understanding of the user’s mental model.</p>
         <picture>
-          <source srcset="img/Evermind_informationarchitect@1x.jpg" media="(max-width:767px)">
-          <img src="img/Evermind_informationarchitect@1x.jpg" alt="information acrchitecture">
+          <source srcset="img/evermind/evermind_informationarchitect@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_informationarchitect@1x.png" alt="information acrchitecture">
         </picture>
       </div>
       <div>
         <h3> Cardsorting </h3>
         <picture>
-          <source srcset="img/Evermind_cardsorting@1x.jpg" media="(max-width:767px)">
-          <img src="img/Evermind_cardsorting@1x.jpg" alt="Cardsorting">
+          <source srcset="img/evermind/evermind_cardsorting@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_cardsorting@1x.png" alt="Cardsorting">
 </picture>
       </div>
       <div>
         <h3>Prototypes</h3>
         <picture>
-          <source srcset="img/Evermind_Lowfedilitywireframes@1x.jpg" media="(max-width:767px)">
-          <img src="img/Evermind_Lowfedilitywireframes@1x.jpg" alt="low fedility wireframes">
+          <source srcset="img/evermind/evermind_Lowfedilitywireframes@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_Lowfedilitywireframes@1x.png" alt="low fedility wireframes">
         </picture>
       </div>
       <div>
@@ -148,8 +148,8 @@
           according to the logic of my user flows.
           <p />
           <picture>
-            <source srcset="img/Evermind_midfedility wireframes@1x.jpg" media="(max-width:767px)">
-            <img src="img/Evermind_midfedility wireframes@1x.jpg" alt="low fedility wireframes">
+            <source srcset="img/evermind/evermind_midfedility wireframes@1x.png" media="(max-width:767px)">
+            <img src="img/evermind/evermind_midfedility wireframes@1x.png" alt="low fedility wireframes">
           </picture>
       </div>
       <div>
@@ -158,8 +158,8 @@
           app with real users to identify its strengths and weaknesses.
           <p />
           <picture>
-            <source srcset="img/Evermind_usertesting@1x.jpg" media="(max-width:767px)">
-            <img src="img/Evermind_usertesting@1x.jpg" alt="Usability testing">
+            <source srcset="img/evermind/evermind_usertesting@1x.png" media="(max-width:767px)">
+            <img src="img/evermind/evermind_usertesting@1x.png" alt="Usability testing">
           </picture>
         <h3>goal</h3>
         <p>We observed and measured whether users understood the app and its value and how to
@@ -167,22 +167,22 @@
           with mindsoul for the first time on mobile.</p>
         <h3>A/B preference test </h3>
         <picture>
-          <source srcset="img/Evermind_AB preference test@1x.jpg" media="(max-width:767px)">
-          <img src="img/Evermind_AB preference test@1x" alt="A/B preference test">
+          <source srcset="img/evermind/evermind_AB preference test@1x.png" media="(max-width:767px)">
+          <img src="iimg/evermind/evermind_AB preference test@1x.png" alt="A/B preference test">
         </picture>
       </div>
       <div>
         <h3> Visual design </h3>
         <picture>
-          <source srcset="img/Evermind_visualdesign@1x.png" media="(max-width:767px)">
-          <img src="img/Evermind_visualdesign@1x.png" alt="Visual design">
+          <source srcset="img/evermind/evermind_visualdesign@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_visualdesign@1x.png" alt="Visual design">
         </picture>
       </div>
       <div>
         <h3>High fedility wireframes</h3>
         <picture>
-          <source srcset="img/Evermind_highfedilityscreens@1x.png" media="(max-width:767px)">
-          <img src="img/Evermind_highfedilityscreens@1x.png" alt="High fedility wireframes">
+          <source srcset="img/evermind/evermind_highfedilityscreens@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_highfedilityscreens@1x.png" alt="High fedility wireframes">
         </picture>
       </div>
       <h3>Conclusion</h3>
