--- a/about.html
+++ b/about.html
@@ -16,28 +16,28 @@
 
 </head>
 
-<body>
-	<header>
-		<div class="container">
-			<!-- example navigation -->
-			<nav>
-				<div>
-					<a href="index.html"> </a>
-					<img src="img/favicon.ico.jpg" class="logo" alt="Pranali Linge">
-					<ul class="navigation">
-						<li>
-							<a class="menu-link" href="work.html">Work</a>
-						</li>
-						<li>
-							<a class="menu-link" href="about.html">About</a>
-						</li>
-						<li>
-							<a class="menu-link" href="#contact">Contact</a>
-						</li>
-					</ul>
-			</nav>
-			<!-- example navigation end -->
-	</header>
+<body id="about-page">
+  <div>
+      <header>
+          <!-- example navigation -->
+          <nav>
+                  <div class="container">
+              <a href="index.html"> </a>
+              <img src="img/favicon.ico.jpg" class="logo" alt="Pranali Linge">
+              <ul class="navigation">
+                <li>
+                  <a class="menu-link" href="work.html">Work</a>
+                </li>
+                <li>
+                  <a class="menu-link" href="about.html">About</a>
+                </li>
+                <li>
+                  <a class="menu-link" href="#contact">Contact</a>
+                </li>
+              </ul>
+          </nav>
+          <!-- example navigation end -->
+      </header>
 
   <Main>
     <div>
