Updated evermind header

--- a/evermind.html
+++ b/evermind.html
@@ -22,12 +22,18 @@
 			<!-- example navigation -->
 			<nav>
 				<div>
-					<a href="evermind.html"> </a>
+					<a href="index.html"> </a>
 					<img src="img/favicon.ico.jpg" class="logo" alt="Pranali Linge">
 					<ul class="navigation">
-						<a class="menu-link" href="work.html">Work</a>
-						<a class="menu-link" href="about.html">About</a>
-						<a class="menu-link" href="#contact">Contact</a>
+						<li>
+							<a class="menu-link" href="work.html">Work</a>
+						</li>
+						<li>
+							<a class="menu-link" href="about.html">About</a>
+						</li>
+						<li>
+							<a class="menu-link" href="#contact">Contact</a>
+						</li>
 					</ul>
 			</nav>
 			<!-- example navigation end -->
