--- a/evermind.html
+++ b/evermind.html
@@ -199,36 +199,35 @@
       </div>
   </main>
 
-  	<footer>
-  		<div class="container">
-  			<h2>Get in Touch</h2>
-  			<p>
-  				Do you like my work and want to discuss opportunities?
-  			<div>
-  				<a href="mailto:pranaliplinge@gmail.com" class="button contact">Send me an email</a>
-  				<ul>
-  					<div>
-  						<!--Social Media Layout and Placeholders-->
-  						<li><a href="https://www.linkedin.com/in/pranalilinge/" target="_blank"></li>
-  						<picture>
-  							<source srcset="img/socialmedia/linkedin.png" media="(max-width:32px)">
-  							<img src="img/socialmedia/linkedin.png" alt="linkedin">
-  						</picture>
-  						<li><a href="https://www.behance.net/pranali3" target="_blank"></li>
-  						<picture>
-  							<source srcset="img/socialmedia/behance.png" media="(max-width:32px)">
-  							<img src="img/socialmedia/behance.png" alt="behance">
-  						</picture>
-  						<li><a href="https://dribbble.com/pranalilinge" target="_blank"></li>
-  						<picture>
-  							<source srcset="img/socialmedia/dribble.png" media="(max-width:32px)">
-  							<img src="img/socialmedia/dribble.png" alt="dribble">
-  						</picture>
-  				</ul>
-  				<p>Copyright Pranali Linge 2022</p>
-  			</div>
-  	</footer>
+	<footer>
+		<div class="container">
+			<h3>Get in Touch</h3>
+			<p>
+				Do you like my work and want to discuss opportunities?</p>
+			<div>
+				<a href="mailto:pranaliplinge@gmail.com" class="button contact">Send me an email</a>
+				<ul class="social-links">
+					<!--Social Media Layout and Placeholders-->
+					<li>
+						<a href="https://www.linkedin.com/in/pranalilinge/" target="_blank">
+							<img src="img/socialmedia/linkedin.png" alt="linkedin">
+						</a>
+					</li>
+					<li>
+						<a href="https://www.behance.net/pranali3" target="_blank">
+							<img src="img/socialmedia/behance.png" alt="behance">
+						</a>
+					</li>
 
+					<li>
+						<a href="https://dribbble.com/pranalilinge" target="_blank">
+							<img src="img/socialmedia/dribbble.png" alt="dribble">
+						</a>
+					</li>
+				</ul>
+				<p>Copyright Pranali Linge 2022</p>
+			</div>
+	</footer>
 </body>
 
 </html>
