--- a/index.html
+++ b/index.html
@@ -715,6 +715,7 @@
             <p>Copyright Pranali Linge 2022</p>
           </div>
       </footer>
+      <script src="js/scripts.js"></script>
 </body>
 
 </html>
